Committer: root <root@dhcp-128-169-4-43.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -53,8 +53,34 @@
 		<A NAME="New" class="subtitle">Highlighted References</A>
 <BLOCKQUOTE class="fs14">
 
-<B><I>Please send us citations to articles that we may have missed.</I></B>
+<B><I>Please send us citations to articles that we may have missed.</I>
+
+<BR>
+<BR>
+ <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for "genenetwork.org" OR "webqtl". (976 hits as of Aug 2015).
+
+</B>
 <OL>
+
+<LI> Xue Y, Li J, Yan L, Lu L, Liao FF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26092713" target="_blank" class="fwn">2015</A>) Genetic variability to diet-induced hippocampal dysfunction in BXD recombinant inbred (RI) mouse strains. Behav Brain Res 292:83-94
+<BR>
+<BR>
+
+<LI>Chaum E, Winborn CS, Bhattacharya S (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25963977" target="_blank" class="fwn">2015</A>) Multilayered genetic and omics dissection of mitochondrial activity in a mouse reference population. Mamm Genome 26:210-221
+<BR>
+<BR>
+
+<LI>Cheng Q, Seltzer Z, Sima C, Lakschevitz FS, Glogauer M. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25942439" target="_blank" class="fwn">2015</A>) Quantitative Trait Loci and Candidate Genes for Neutrophil Recruitment in Sterile Inflammation Mapped in AXB-BXA Recombinant Inbred Mice. PLoS One 10:e0124117
+<BR>
+<BR>
+
+<LI>Scott RE, Ghule PN, Stein JL, Stein GS (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25215496" target="_blank" class="fwn">2015</A>) Cell cycle gene expression networks discovered using systems biology: Significance in carcinogenesis. J Cell Physiol 230:2533-42
+<BR>
+<BR>
+
+<LI> Williams EG, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26140590" target="_blank" class="fwn">2015</A>) The convergence of systems and reductionist approaches in complex trait analysis. Cell 162:23-32. 
+<BR>
+<BR>
 
 <LI>Wu Y, Williams EG, Dubuis S, Mottis A, Jovaisaite V, Houten SM, Argmann CA, Faridi P, Wolski W, Kutalik Z, Zamboni N, Auwerx J, Aebersold R (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25215496" target="_blank" class="fwn">2014</A>) Multilayered genetic and omics dissection of mitochondrial activity in a mouse reference population. Cell 158:1415-1430
 <BR>
@@ -111,9 +137,12 @@ Houtkooper RH, Mouchiroud L, Ryu D, Moullan N, Katsyuba E, Knott G,  Williams RW
 </Blockquote>
 <OL>					
 <LI>
-Williams RW, Mulligan MK (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23195314" target="_blank" class="fwn">2012</A>) Genetic and molecular network analysis of behavior. Int Rev Neurobiol. 104:135-57. This is a great primer that explains how to use GeneNetwork. 
+Williams RW, Mulligan MK (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23195314" target="_blank" class="fwn">2012</A>) Genetic and molecular network analysis of behavior. Int Rev Neurobiol. 104:135-57. [This is a great primer that explains how to use GeneNetwork.] 
 <SMALL><A HREF="/images/upload/Williams_Mulligan_Bioinformatics of Brain Short 2012.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
+<LI> Williams EG, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26140590" target="_blank" class="fwn">2015</A>) The convergence of systems and reductionist approaches in complex trait analysis. Cell 162:23-32. [Research into the genetic and environmental factors behind complex trait variation has traditionally been segregated into distinct scientific camps. The reductionist approach aims to decrypt phenotypic variability bit by bit, founded on the underlying hypothesis that genome-to-phenome relations are largely constructed from the additive effects of their molecular players. In contrast, the systems approach aims to examine large-scale interactions of many components simultaneously, on the premise that interactions in gene networks can be both linear and non-linear. Both approaches are complementary, and they are becoming increasingly intertwined due to developments in gene editing tools, omics technologies, and population resources. Together, these strategies are beginning to drive the next era in complex trait research, paving the way to improve agriculture and toward more personalized medicine.]  <SMALL><A HREF="/images/upload/WilliamsEG_Auwerx_Cell2015.pdf" target="_blank" class="fwn">PDF version</A>
+</SMALL>
+
 <LI>
 Wang J, Williams RW, Manly KF (<a href="http://journals.humanapress.com/ArticleDetail.pasp?issn=1539-2791&acode=NI:1:4:299" target="_blank" class="fwn">2003</a>) WebQTL: Web-based complex trait analysis. Neuroinformatics 1: 299-308 <A href="http://www.genenetwork.org/pdf/webqtl.pdf" class="fwn"><I>Full Text PDF Version</I></A>. [A good technical reference to WebQTL and GeneNetwork]
 <LI>
@@ -183,11 +212,24 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 
 </Blockquote>
 <OL>
+
+
+
+
 <LI>
-Chaum E, Winborn CS, Bhattacharya S (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2015</A>) Genomic regulation of senescence and innate immunity signaling in the retinal pigment epithelium.  Mammalian Genome in press <A HREF="/images/upload/ChaumMammGenome2015.pdf"> Full text</A>
+Chaum E, Winborn CS, Bhattacharya S (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2015</A>) Genomic regulation of senescence and innate immunity signaling in the retinal pigment epithelium.  Mammalian Genome 26:210-221 <A HREF="/images/upload/ChaumMammGenome2015.pdf"> Full text</A>
+<LI>Cheng Q, Seltzer Z, Sima C, Lakschevitz FS, Glogauer M (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25608512" target="_blank" class="fwn">2015</A>) Quantitative trait loci and candidate genes for neutrophil recruitment in sterile inflammation mapped in AXB-BXA recombinant inbred mice. PLoS One 10:e0124117
+<LI>Cook MN, Baker JA, Heldt SA, Williams RW, Hamre KM, Lu L (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25991709" target="_blank" class="fwn">2015</A>) Identification of candidate genes that underlie the QTL on chromosome 1 that mediates genetic differences in stress-ethanol interactions. Physiol Genomics in press
 
+<LI>Ferguson B, Ram R, Handoko HY, Mukhopadhyay P, Muller HK, Soyer HP, Morahan G, Walker GJ (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25088201" target="_blank" class="fwn">2015</A>) Melanoma susceptibility as a complex trait: genetic variation controls all stages of tumor progression. Oncogene 34:2879-86 
 
+<LI>Lee J, Seol MY, Jeong S, Kwon HJ, Lee CR, Ku CR, Kang SW, Jeong JJ, Shin DY, Nam KH, Lee EJ, Chung WY, Jo YS (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25942439" target="_blank" class="fwn">2015</A>) KSR1 is coordinately regulated with Notch signaling and oxidative phosphorylation in thyroid cancer. J Mol Endocrinol 54:115-124
+<LI>Padula AE, Griffin WC 3rd, Lopez MF, Nimitvilai S, Cannady R, McGuier NS, Chesler EJ, Miles MF, Williams RW, Randall PK, Woodward JJ, Becker HC, Mulholland PJ (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25942439" target="_blank" class="fwn">2015</A>) KCNN genes that encode small-conductance Ca(2+)-activated K(+) channels influence alcohol and drug addiction. Neuropsychopharmacology 40:1928-1939
+<LI>Scott RE, Ghule PN, Stein JL, Stein GS (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25662840" target="_blank" class="fwn">2015</A>) Cell cycle gene expression networks discovered using systems biology: Significance in carcinogenesis. J Cell Physiol 230:2533-42
+<LI> Xue Y, Li J, Yan L, Lu L, Liao FF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26092713" target="_blank" class="fwn">2015</A>) Genetic variability to diet-induced hippocampal dysfunction in BXD recombinant inbred (RI) mouse strains. Behav Brain Res 292:83-94
+<LI> Williams EG, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26140590" target="_blank" class="fwn">2015</A>) The convergence of systems and reductionist approaches in complex trait analysis. Cell 162:23-32. <SMALL><A HREF="/images/upload/WilliamsEG_Auwerx_Cell2015.pdf" target="_blank" class="fwn">PDF version</A></SMALL>
 
+<LI> Ashbrook DG, Williams RW, Lu L, Hager R (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26140590" target="_blank" class="fwn">2015</A>) A cross-species genetic analysis identifies candidate genes for mouse anxiety and human bipolar disorder. Front Behav Neurosci 9:171 
 </OL>
 </Blockquote>
 
@@ -226,25 +268,18 @@ Hall RA, Liebe R, Hochrath K, Kazakov A, Alberts R, Laufs U, Böhm M, Fischer HP
 Harenza JL, Muldoon PP, Biasi MD, Imad Damaj M, Miles MF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24289814" target="_blank" class="fwn">2014</A>) Genetic variation within the Chrna7 gene modulates nicotine reward-like phenotypes in mice. Genes, Brain & Behavior 13:213-225 
 <LI>
 Hayes SK, Hager R, Grencis RK (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24628794" target="_blank" class="fwn">2014</A>)  Sex-dependent genetics effects on immune responses to parasitic nematodes. BMC Genomics 15:193
-
 <LI>
 Huang Y, Zhu X, Wang L, Liu X, Lu L, Gu W, Jiao Y (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25133246" target="_blank" class="fwn">2014</A>) Genome wide analysis of sex difference in gene expression profiles of bone formations using sfx mice and BXD RI strains. ScientificWorldJournal 2014:584910
-
 <LI>
 Hasenfuss SC, Bakiri L, Thomsen MK, Williams EG, Auwerx J, Wagner EF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24411941" target="_blank" class="fwn">2014</A>) Regulation of steatohepatitis and PPARγ signaling by distinct AP-1 dimers. Cell Metab. 2014 Jan 7;19(1):84-95.
-
 <LI>
 Jones BC, O'Callaghan JP, Lu L, Williams RW, Alam G, Miller DB (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25192776" target="_blank" class="fwn">2014</A>) Genetic correlational analysis reveals no association between MPP+ and the severity of striatal dopaminergic damage following MPTP treatment in BXD mouse strains. Neurotoxicol Teratol pii: S0892-0362(14)00159-7
-
 <LI>
 Keeley PW, Whitney IE, Madsen NR, St John AJ, Borhanian S, Leong SA, Williams RW, Reese BE (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24954025" target="_blank" class="fwn">2014</A>) Independent genomic control of neuronal number across retinal cell types. Dev Cell 30:103-109
-
 <LI>
 Keeley PW, Zhou C, Lu L, Williams RW, Melmed S, Reese BE (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24927528" target="_blank" class="fwn">2014</A>) Pituitary tumor-transforming gene 1 regulates the patterning of retinal mosaics. Proc Natl Acad Sci USA 111:9295-
-
 <LI>
 Kweon KH, Lee CR, Jung SJ, Ban EJ, Kang SW, Jeong JJ, Nam KH, Jo YS, Lee J, Chung WY (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25109285" target="_blank" class="fwn">2014</A>) Sirt1 induction confers resistance to etoposide-induced genotoxic apoptosis in thyroid cancers. Int J Oncol 45:2065-2075
-
 <LI>
 Loos M, Mueller T, Gouwenberg Y, Wijnands R, van der Loo RJ, Birchmeier C, Smit AB, Spijker S (<A HREF="/images/upload/Loos_Spijker_Nrg3Impulsive_BioPsch_2014.pdf" target="_blank" class="fwn">2014</A>) Neuregulin-3 in the mouse medial prefrontal cortex regulates impulsive action. Biol Psychiatry 76:648-655
 
@@ -255,7 +290,11 @@ Lotan A, Fenckova M, Fralten J, Alttoa A, Dixson L, Williams RW, van der Voet M 
 McLachlan SM, Aliesky H, Banuelos B, Magana J, Williams RW, Rapoport B. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25051451" target="_blank" class="fwn">2014</A>) Immunoglobulin heavy chain variable region and major histocompatibility region genes are linked to induced graves' disease in females from two very large families of recombinant inbred mice. Endocrinology 155:4094-4103
 <LI>
 McLachlan SM, Hamidi S, Aliesky H, Williams RW, Rapoport B (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24564389" target="_blank" class="fwn">2014</A>) Sex, genetics and the control of thyroxine and thyrotropin in mice. Thyroid 24:1080-1087
+
 <LI>Muldoon PP, Jackson KJ, Perez E, Harenza JL, Molas S, Rais B, Anwar H, Zaveri NT, Maldonado R, Maskos U, McIntosh JM, Dierssen M, Miles MF, Chen X, De Biasi M, Damaj MI (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24750073" target="_blank" class="fwn">2014</A>) The alpha3beta4* nicotinic ACh receptor subtype mediates physical dependence to morphine: mouse and human studies. Br J Pharmacol 171:3845-3857
+
+<Li>Nguyen C, Baten A, Morahan G  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24647628" target="_blank" class="fwn">2014</A>) Comparison of sequence variants in transcriptomic control regions across 17 mouse genomes.  Database (Oxford): bau020. doi: 10.1093/database/bau020
+
 <LI>Pandey AK, Lu L, Wang X, Homayouni R, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24523945" target="_blank" class="fwn">2014</A>) Functionally enigmatic genes: a case study of the brain ignorome. PLoS One 9(2):e88889
 
 <LI>Pandey AK, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25172476" target="_blank" class="fwn">2014</A>) Genetics of gene expression in CNS. Int Rev Neurobiol 116:195-231
@@ -268,7 +307,15 @@ McLachlan SM, Hamidi S, Aliesky H, Williams RW, Rapoport B (<A HREF="https://ncb
 
 <LI>Porcu P, Morrow AL (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24770626" target="_blank" class="fwn">2014</A>) Divergent neuroactive steroid responses to stress and ethanol
 in rat and mouse strains: relevance for human studies. Psychopharmacology (Berl) 231:3257-3272
+
+
+<LI>Ram R, Mehta M, Balmer L, Gatti DM, Morahan G (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25236450" target="_blank" class="fwn">2014</A>)
+Rapid identification of major-effect genes using the collaborative cross. Genetics 198:75-86
+PMID: 25236450 
+
+
 <LI>Ryu D, Jo YS, Lo Sasso G, Stein S, Zhang H, Perino A, Lee JU, Zeviani M, Romand R, Hottiger MO, Schoonjans K, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25200183" target="_blank" class="fwn">2014</A>) A SIRT7-dependent acetylation switch of GABPβ1 controls mitochondrial function. Cell Metab in press
+
 <LI>Thompson RL, Williams RW, Kotb M, Sawtell NM. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24651695" target="_blank" class="fwn">2014</A>) A forward phenotypically driven unbiased genetic analysis of host genes that moderate herpes simplex virus virulence and stromal keratitis in mice. PLoS One 9(3):e92342
 <LI>Toth LA, Trammell RA, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24535895" target="_blank" class="fwn">2014</A>) Mapping complex traits using families of recombinant inbred strains: an overview and example of mapping susceptibility to Candida albicans induced illness phenotypes. Pathog Dis 71:234-248
 <LI>Unger EL, Jones BC, Bianco LE, Allen RP, Earley CJ (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24406439" target="_blank" class="fwn">2014</A>) Diurnal variations in brain iron concentrations in BXD RI mice. Neuroscience 263:54-59
