Committer: root <root@dhcp-128-169-4-43.uthsc.edu> On branch master

--- a/web/header.html
+++ b/web/header.html
@@ -6,6 +6,9 @@
 				<a href="/">
 				<IMG src="/images/upload/GeneNet_Banner2009c.png" border="0">
 				</a>
+				<a href="http://gn2.genenetwork.org/">
+				<IMG src="/images/gn2.png" border="0">
+				</a>
 			</TD>
 			<TD valign="bottom">
 				<A HREF="http://bnw.genenetwork.org/BNW/sourcecodes/home.php" target="_blank">
