Committer: root <root@dhcp-128-169-4-43.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -75,7 +75,7 @@
 <BR>
  
 
-<LI> Wang X, Pandey AK, Mulligan MK, Williams EG, Mozhui K, Li Z, Jovaisaite V, Quarles LD, Xiao Z, Huang J, Capra JA, Chen Z, Taylor WL, Bastarache L, Niu X, Pollard KS, Ciobanu DC, Reznik AO, Tishkov AV, Zhulin IB, Peng J, Nelson SF, Denny JC, Auwerx J, Lu L, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2016</A>) 216.	Joint mouse-human phenome-wide association to test gene function and disease risk. Nature Communications in press
+<LI> Wang X, Pandey AK, Mulligan MK, Williams EG, Mozhui K, Li Z, Jovaisaite V, Quarles LD, Xiao Z, Huang J, Capra JA, Chen Z, Taylor WL, Bastarache L, Niu X, Pollard KS, Ciobanu DC, Reznik AO, Tishkov AV, Zhulin IB, Peng J, Nelson SF, Denny JC, Auwerx J, Lu L, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2016</A>). Joint mouse-human phenome-wide association to test gene function and disease risk. Nature Communications in press
 <BR>
 <BR>
  
