Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -67,6 +67,13 @@
 
 <OL>
 
+<LI> Williams RW, Williams EG (<A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Resources for Systems Genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology; Schughart K, Williams RW eds.; Humana Press, in press
+[This is a currently the most comprehensive protocol (20 Mb) that explains how to use GeneNetwork.] 
+<SMALL><A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn">PDF version</A>
+</SMALL>
+<BR>
+<BR>
+
 <LI> Mulligan MK, Mozhui K, Prins P, Williams RW (<A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) GeneNetwork – A toolbox for systems genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology; Schughart K, Williams RW eds.; Humana Press, in press
 [This is a currently the most comprehensive protocol (20 Mb) that explains how to use GeneNetwork.] 
 <SMALL><A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn">PDF version</A>
@@ -463,6 +470,11 @@ Mulligan MK, Wang X, Adler AL, Mozhui K, Lu L, Williams RW (<A HREF="https://ncb
 Newbury AJ, Rosen GD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22666227" target="_blank" class="fwn">2012</A>) Genetic, morphometric, and behavioral factors linked to the midsagittal area of the corpus callosum. Frontiers in Genetics 3:91 
 <BR><SMALL> <A HREF="http://www.frontiersin.org/Journal/DownloadFile.ashx?pdf=1&FileId=%204774&articleId=%2027108&Version=%201&ContentTypeId=21&FileName=%20fgene-03-00091.pdf" target="_blank" class="fwn">PDF version</A><A href="http://www.frontiersin.org/Neurogenomics/10.3389/fgene.2012.00091/full" target="_blank" class="fwn"><I>Full Text version</I> </A> 
 </SMALL>
+
+
+<LI>
+Parker CC, Cheng R, Sokoloff G, Palmer AA (<A HREF="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3368015/" target="_blank" class="fwn">2012</A>) Genome-wide association for methamphetamine sensitivity in an advanced intercross mouse line. Genes, Brain & Behavior 11:52-61
+
 <LI>
 Reinius B, Johansson MM, Radomska KJ, Morrow EH, Pandey GK, Kanduri C, Sandberg R, Williams RW, Jazin E (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23140559" target="_blank" class="fwn">2012</A>) Abundance of female-biased and paucity of male-biased somatically expressed genes on the mouse X-chromosome. BMC Genomics 13:607
 <LI>
