Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/tutorial/WebQTLTour/index.html
+++ b/web/tutorial/WebQTLTour/index.html
@@ -97,7 +97,7 @@ style='font-weight:normal'> When you click on the </span><b>Search</b><span styl
  
 
 
-<p>In this particular case, if you enter "Grin2b" you will get at a list of eight data sets or Record IDs. Four of these (index numbers 2 through 5) are measurements of <i>Grin2b</i></span> expression.All four are measurements of mRNA levels that target different parts of the mRNA molecule: 1. the far distal 3' untranslated region (UTR), 2. the distal 3' UTR of a long-form variant, 3. the 3' region of the last coding exon (coding exon 12), and 4. an alternative 3' UTR (a short form of the message). Which of the three should you pick? The best choice is usually the one which corresponds to coding sequence--in this case the highlighted Record ID 142223_at (index number 4). You an come back to the other data sets later to see how they compare. And you can ignore all of the other rows of data that were found only because the gene descriptions happen to include the text "Grin2b" 
+<p>In this particular case, if you enter "Grin2b" you will get at a list of eight data sets or Record IDs. Four of these (index numbers 2 through 5) are measurements of  <i>Grin2b</i></span> expression. All four are measurements of mRNA levels that target different parts of the mRNA molecule: 1. the far distal 3' untranslated region (UTR), 2. the distal 3' UTR of a long-form variant, 3. the 3' region of the last coding exon (coding exon 12), and 4. an alternative 3' UTR (a short form of the message). Which of the three should you pick? The best choice is usually the one which corresponds to coding sequence--in this case the highlighted Record ID 142223_at (index number 4). You an come back to the other data sets later to see how they compare. And you can ignore all of the other rows of data that were found only because the gene descriptions happen to include the text "Grin2b" 
 
 <p> <img width=703 height=29
 src="/images/upload/tutorial_banner.jpg" v:shapes="_x0000_i1028"> </p>
@@ -240,7 +240,7 @@ src="/images/upload/Tutorial_Map2.jpg" v:shapes="_x0000_i1039"> </span></p>
   
 
 <p><b>Conclusion. </b><span
-style='font-weight:normal'>The tour you have just taken has led your through typical steps in analyzing and evaluating gene expression data. This tour may also have generated a number of intriguingand hypotheses about the relations of NR2B to itself and with molecules in the hippocampus. You can repeat this type of analysis with any of about 20000 other genes in this data set. You can do the same analysis for complex sets of transcript and traits. you can also repeat this type of analysis in other tissues. It takes time, but the cost-benefit ratio is high.</span></p>
+style='font-weight:normal'>The tour you have just taken has led your through typical steps in analyzing and evaluating gene expression data. This tour may also have generated a number of intriguing hypotheses about the relations of NR2B to itself and with molecules in the hippocampus. You can repeat this type of analysis with any of about 20000 other genes in this data set. You can do the same analysis for complex sets of transcript and traits. you can also repeat this type of analysis in other tissues. It takes time, but the cost-benefit ratio is high.</span></p>
 
 
 <p><b>Step 10. A simple self-test</b></p>
@@ -266,7 +266,7 @@ normal'>) and NR2B (</span><i>Grin2b</i><span style='font-style:normal'>) share 
 
 <p>This work was supported by a Human Brain Project funded jointly by the National Institute on Drug Abuse, National Institute of Mental Health, the National Institute on Alcohol Abuse and Alcoholism, and the National Science Foundation (award P20-MH 62009 and P20-DA 21131 to KFM and RW) and by a separate grant from The National Institute on Alcohol Abuse and Alcoholism (INIA grants U01AA13499, U24AA13513 to RW).</p>
   
-<p><span style='color:black'>(Text version of March 28, 2011 by RW</span></p>
+<p><span style='color:black'>(Text version of March 4, 2016 by RW</span></p>
 
 <!--
 <p><span style='color:black'>(Text generated October 8, 2003 by RW; modified Oct. 27, 2003 by RW; completely rewritten by RW on May 22, 2006.)</span></p>
