Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -75,14 +75,21 @@
 <BR>
 
 <LI> Mulligan MK, Mozhui K, Prins P, Williams RW (<A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) GeneNetwork – A toolbox for systems genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology; Schughart K, Williams RW eds.; Humana Press, in press
-[This is a currently the most comprehensive protocol (20 Mb) that explains how to use GeneNetwork.] 
+[This is currently the most comprehensive protocol that explains how to use GeneNetwork.] 
 <SMALL><A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
 <BR>
 <BR>
  
 
-<LI> Wang X, Pandey AK, Mulligan MK, Williams EG, Mozhui K, Li Z, Jovaisaite V, Quarles LD, Xiao Z, Huang J, Capra JA, Chen Z, Taylor WL, Bastarache L, Niu X, Pollard KS, Ciobanu DC, Reznik AO, Tishkov AV, Zhulin IB, Peng J, Nelson SF, Denny JC, Auwerx J, Lu L, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2016</A>). Joint mouse-human phenome-wide association to test gene function and disease risk. Nature Communications in press
+<LI> Wang X, Pandey AK, Mulligan MK, Williams EG, Mozhui K, Li Z, Jovaisaite V, Quarles LD, Xiao Z, Huang J, Capra JA, Chen Z, Taylor WL, Bastarache L, Niu X, Pollard KS, Ciobanu DC, Reznik AO, Tishkov AV, Zhulin IB, Peng J, Nelson SF, Denny JC, Auwerx J, Lu L, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26833085" target="_blank" class="fwn">2016</A>). Joint mouse-human phenome-wide association to test gene function and disease risk. Nature Communications 7:10464 
+[Best reference on the BXD family of strains and the wide range of phenotypes that have been generated over the past 40 years.] 
+
+<SMALL><A HREF="/images/upload/Wang_PheWas_NatComm_2016.pdf" target="_blank" class="fwn">PDF version</A> and the
+
+<A HREF="/images/upload/Wang_SupplementalTables_NatComm_2016.xlsx" target="_blank" class="fwn">Supplementary Tables in one Excel file</A>
+</SMALL>
+
 <BR>
 <BR>
  
