Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -59,13 +59,18 @@
 
 <BR>
 <BR>
- <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for "genenetwork.org" OR "webqtl". (976 hits as of Aug 2015).
+ <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for "genenetwork.org" OR "webqtl" (1020 hits as of April 2016).
 </B>
 
 
 
 
 <OL>
+
+<LI>Williams EG, Wu Y, Pooja J, Dubuis S, Blattmann P, Argmann CA, Houten SM, Amariuta T, Wolski W, Zamboni N, Aebersold R, Auwerx J (<A HREF="GET" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Systems proteomics and trans-omic integration illuminate new mechanisms in mitochondrial function. Science in press.
+
+<BR>
+<BR>
 
 <LI> Williams RW, Williams EG (<A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Resources for Systems Genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology; Schughart K, Williams RW eds.; Humana Press, in press
 [This is a currently the most comprehensive protocol (20 Mb) that explains how to use GeneNetwork.] 
