--- a/web/infoshare/manager/infofile.html
+++ b/web/infoshare/manager/infofile.html
@@ -223,6 +223,13 @@ echo "</select>";
                                     type="text" maxlength="500" placeholder="GN_AccesionId">
                             </div>
                             
+    <label for="Investigator">InfoFileTitle</label>
+                           <div class="input-append">
+                                <input class="input-xlarge"
+                                    id="quick" name="InfoFileTitle"
+                                    type="text" maxlength="500" placeholder="InfoFileTitle">
+                            </div>
+                            
     <label for="Investigator">InfoPageName</label>
                            <div class="input-append">
                                 <input class="input-xlarge"
