--- a/web/infoshare/manager/member-studies-edit.html
+++ b/web/infoshare/manager/member-studies-edit.html
@@ -47,7 +47,7 @@ include ('study-access-denied.html');
                                     type="text" readonly maxlength="900" required>
                             </div>
                         
-                        <label for="species">DatasetName:</label>
+                        <label for="species">Main Study Name [DatasetName]:</label>
                             <div class="input-append">
                                 <input class="input-xlarge"
                                     id="DatasetName" name="DatasetName" value="<? echo "$row[DatasetName]"?>"
