--- a/web/reference.html
+++ b/web/reference.html
@@ -72,14 +72,14 @@
 <BR>
 <BR>
 
-<LI> Williams RW, Williams EG (<A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Resources for Systems Genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology; Schughart K, Williams RW eds.; Humana Press, in press
-[This is a currently the most comprehensive protocol (20 Mb) that explains how to use GeneNetwork.] 
+<LI> Williams RW, Williams EG (<A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Resources for Systems Genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology in press
+[This review is intended to help you when making the hard choices about types of resources to use in system genetic studies. The short answer: embrace diversity in your resources. The computational barriers to joint analysis are now minimal.] 
 <SMALL><A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
 <BR>
 <BR>
 
-<LI> Mulligan MK, Mozhui K, Prins P, Williams RW (<A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) GeneNetwork – A toolbox for systems genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology; Schughart K, Williams RW eds.; Humana Press, in press
+<LI> Mulligan MK, Mozhui K, Prins P, Williams RW (<A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) GeneNetwork – A toolbox for systems genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology in press
 [This is currently the most comprehensive protocol that explains how to use GeneNetwork.] 
 <SMALL><A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
